refactoring och tester

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -9,6 +9,6 @@
     <div class="action-buttons">
         <a th:href="@{/timeoff/my}" class="btn">Ledighetsansökan</a>
         <a th:href="@{/swap-requests}" class="btn">Passbytesförfrågningar</a>
-        <a th:href="@{/shifts/my-shifts}" class="btn">Mina Skift</a> <!-- Ändrad URL -->
+        <a th:href="@{/shifts/my-shifts}" class="btn">Mina Skift</a>
     </div>
 </div>
