--- a/src/main/resources/templates/shifts/my-shifts.html
+++ b/src/main/resources/templates/shifts/my-shifts.html
@@ -48,29 +48,27 @@
     document.addEventListener('DOMContentLoaded', function () {
         var shifts = /*[[${shifts}]]*/ [];
 
-        // Omvandla skift till FullCalendars eventformat
+
         var events = shifts.map(function(shift) {
             return {
-                title: shift.startTime + ' - ' + shift.endTime,  // Endast start - slut tid, utan duplicerad starttid
-                start: shift.date + 'T' + shift.startTime,       // Starttiden för eventet
-                end: shift.date + 'T' + shift.endTime,           // Sluttiden för eventet
+                title: shift.startTime + ' - ' + shift.endTime,
+                start: shift.date + 'T' + shift.startTime,
+                end: shift.date + 'T' + shift.endTime,
                 extendedProps: {
                     confirmed: shift.confirmed
                 }
             };
         });
 
-        // Initiera kalendern
         var calendarEl = document.getElementById('calendar');
         var calendar = new FullCalendar.Calendar(calendarEl, {
-            initialView: 'dayGridMonth', // Månadsvy vid start
-            events: events, // Sätt eventerna från shifts
+            initialView: 'dayGridMonth',
+            events: events,
             eventRender: function(info) {
-                // Här säkerställer vi att eventets titel är endast "starttid - sluttid"
                 info.el.querySelector('.fc-event-title').innerText = info.event.title;
             },
             eventContent: function(info) {
-                // Detta är den viktigaste delen - tvinga kalendern att bara visa tidsintervallet
+
                 return {
                     html: '<div class="fc-event-time">' + info.event.title + '</div>'
                 };
@@ -83,7 +81,7 @@
             }
         });
 
-        calendar.render(); // Rendera kalendern
+        calendar.render();
     });
 
 
