--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -10,5 +10,6 @@
         <a th:href="@{/timeoff/my}" class="btn">Ledighetsansökan</a>
         <a th:href="@{/swap-requests}" class="btn">Passbytesförfrågningar</a>
         <a th:href="@{/shifts/my-shifts}" class="btn">Mina Skift</a>
+        <a th:href="@{/auth/logout}" class="btn">Logga ut</a>
     </div>
 </div>
