--- a/src/main/resources/templates/shifts/list.html
+++ b/src/main/resources/templates/shifts/list.html
@@ -18,6 +18,7 @@
     <div class="action-buttons">
         <a th:href="@{/timeoff/list}" class="btn">Ledighetsansökan</a>
         <a th:href="@{/swap-requests}" class="btn">Passbytesförfrågningar</a>
+        <a th:href="@{/auth/register-admin}" class="btn">Registrera Admin</a>
     </div>
 
     <a class="create-btn" th:href="@{/shifts/create}">Skapa nytt skift</a>
