--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,5 @@
 <div th:fragment="header">
-    <h1>Mina Skift – <span th:text="${currentUserName}">Användare</span></h1>
+    <h1>Schedulemanager <span th:text="${currentUserName}">Användare</span></h1>
 
     <div class="user-info" th:if="${currentUserName}">
         Välkommen, <span th:text="${currentUserName}">Användare</span>!
